# eeg_display

./: Cargo.toml  README.md
data/: OpenBCI-RAW-2017-02-10_16-13-21.txt  OpenBCI-RAW-2017-02-10_17-10-50-k.txt
src/: appstate.rs  city2d.rs  dftwindower.rs  glium_texdraw.rs  main.rs  openbci_file.rs  pastuff.rs  shared.rs  support.rs  ui.rs  waveformdrawer.rs
