[package]
name = "spectrum_analyser"
version = "0.1.1"
authors = ["Tragh <mikemth@gmail.com>"]

[dependencies]
portaudio = "0.7.0"
rand = "0.3.15"
regex = "0.2"
num = "0.1.36"
rustfft = "1.0.1"
find_folder = "0.3.0"
glium = "0.16.0"

[dependencies.conrod]
version = "0.51.1"
default-features=false
features=["winit","glium"]
