[package]
name = "spectrum_analyser"
version = "0.1.3"
authors = ["Tragh <mikemth@gmail.com>"]

[dependencies]
portaudio = "0.7.0"
rand = "0.3.15"
regex = "0.2"
num = "0.2.0"
rustfft = "1.0.1"
find_folder = "0.3.0"
glium = "0.22.0"
stb_truetype="0.2.3"

[dependencies.conrod]
version = "0.61.1"
default-features=false
features=["winit","glium"]
